log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:29:55 PM UTC: 
 tests:  0|6
total_score: 0/70
8858a4a
Thu 30 Mar 2023 03:35:46 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:52: error: invalid operands to binary * (have ‘ArrayList’ {aka ‘struct ArrayList’} and ‘long unsigned int’)
   14 |   ArrayList listAux = (ArrayList *) malloc(listAux * sizeof(ArrayList *));
      |                                                    ^
Compilation failed
e15c5ec
Thu 30 Mar 2023 03:37:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:51: error: invalid operands to binary * (have ‘ArrayList *’ {aka ‘struct ArrayList *’} and ‘long unsigned int’)
   14 |   ArrayList * listAux = (ArrayList)malloc(listAux * sizeof(ArrayList));
      |                                                   ^
Compilation failed
1791065
Thu 30 Mar 2023 03:37:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:3: error: conversion to non-scalar type requested
   14 |   ArrayList * listAux = (ArrayList)malloc(sizeof(ArrayList));
      |   ^~~~~~~~~
arraylist.c:14:15: error: unused variable ‘listAux’ [-Werror=unused-variable]
   14 |   ArrayList * listAux = (ArrayList)malloc(sizeof(ArrayList));
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
db9ab62
Thu 30 Mar 2023 03:38:05 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:3: error: conversion to non-scalar type requested
   14 |   ArrayList * listAux = (ArrayList)malloc(sizeof(listAux));
      |   ^~~~~~~~~
Compilation failed
a2a09eb
Thu 30 Mar 2023 03:38:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
6a43d3a
Thu 30 Mar 2023 03:41:16 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   listAux->capacity = NULL;
      |                     ^
arraylist.c:17:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   listAux->size = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
cdb0b0e
Thu 30 Mar 2023 03:51:39 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:17: error: assignment to ‘int’ from ‘void **’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   listAux->size = (void **)malloc(sizeof(void *));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
5f7ae72
Thu 30 Mar 2023 03:53:34 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
873520f
Thu 30 Mar 2023 03:59:18 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:23:6: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   23 | data = l->size;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
0fbc404
Thu 30 Mar 2023 04:09:56 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
919fb8c
Thu 30 Mar 2023 04:10:50 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
9c18d1b
